# t1

./: Cargo.toml
src/chunk/: Cargo.toml
src/chunk/src/: column.rs  index.rs  lib.rs
src/chunk/src/arrow/: column.rs
src/chunk/src/mutable/: column.rs  mod.rs
src/common/: Cargo.toml
src/common/src/: column.rs  lib.rs  primitive.rs  time.rs
src/common/src/array/: mod.rs  scalar.rs
src/core/chunk/: Cargo.toml
src/core/chunk/src/: lib.rs
src/core/common/: Cargo.toml
src/core/common/benches/: async_vs_sync.rs
src/core/common/src/: column.rs  context.rs  either.rs  expression.rs  index.rs  lib.rs  primitive.rs  query.rs  schema.rs  time.rs
src/core/common/src/array/: bitmap.rs  dictionary.rs  fixed.rs  id.rs  list.rs  mod.rs  primitive.rs  scalar.rs
src/core/common/src/column/: mod.rs
src/core/common/src/column/field/: mod.rs
src/core/common/src/column/label/: mod.rs  value.rs
src/core/common/src/scalar/: array.rs  list.rs  mod.rs  option.rs  primitive.rs  vec.rs
src/core/executor/: Cargo.toml
src/core/executor/src/: either.rs  (+1 more)
src/core/ql/: Cargo.toml
src/core/query/: Cargo.toml
src/core/query/benches/: simd.rs
src/core/query/src/: lib.rs
src/core/query/src/check/: mod.rs  normalize.rs
src/core/query/src/check/rules/: mod.rs  type.rs
src/core/query/src/checker/: function.rs  mir.rs  mod.rs
src/core/query/src/execute/: function.rs  mod.rs  plan.rs  scan.rs
src/core/query/src/execution/: mod.rs
src/core/query/src/executor/: function.rs  mod.rs  plan.rs  scan.rs
src/core/query/src/language/: expression.rs  mod.rs  promql.rs
src/core/query/src/parse/: mod.rs  promql.rs
src/core/query/src/parser/: hir.rs  mod.rs  promql.rs
src/core/query/src/plan/: logical.rs  physical.rs
src/core/resource/: Cargo.toml
src/ql/: Cargo.toml
src/ql/src/: expression.rs  lib.rs  promql.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs  table.rs
(+24 files in other folders)
