[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["src/core/*", "src/storage"]

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
codegen-units = 16

[workspace.dependencies]
thiserror = "1"
hashbrown = "0.13"
uuid = { version = "1", features = ["v4"] }
regex = "1"
paste = "1"
