[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
hashbrown.workspace = true
thiserror.workspace = true
futures-lite = "1"
uuid = { version = "1", features = ["v4"] }
bitvec = "1"
regex.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["async", "async_futures"] }

[[bench]]
name = "async_vs_sync"
harness = false
